<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/artImageView"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_launcher_background" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="9dp"
        android:ems="10"
        android:hint="Enter Name:"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/artistText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:hint="Enter Artist:"
        android:inputType="textPersonName"
         />

    <EditText
        android:id="@+id/yearText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:hint="Enter Year:"
        android:inputType="textPersonName"
         />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="save"
         />
</LinearLayout>